# scout

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TECHNICAL_DEEP_DIVE.md  codesearch-spec.md  release.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: releasing.md  setup.md  usage.md
src/: config.rs  editor.rs  main.rs  types.rs
src/cli/: config_cmd.rs  daemon.rs  index.rs  init.rs  maintenance.rs  mod.rs  report.rs  repos.rs  search.rs  stats.rs  update.rs
src/index/: mod.rs  parser.rs  updater.rs  walker.rs
src/ml/: embeddings.rs  mod.rs  model.rs
src/repo/: registry.rs
src/search/: bm25.rs  cross_repo.rs  hybrid.rs  mod.rs  rrf.rs
src/storage/: backup.rs  lock.rs  migration.rs  mod.rs  sqlite.rs  tantivy_store.rs  vectors.rs
src/tui/: mod.rs  ui.rs
src/watch/: daemon.rs  git.rs  mod.rs  native.rs  polling.rs
tests/: index_and_search.rs
