[package]
name = "scout"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "scout"
path = "src/main.rs"

[features]
default = []
local-models = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:qdrant-client"]
cloud-models = []
full = ["local-models", "cloud-models"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
# CLI & async
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dialoguer = "0.11"
toml = "0.8"
dirs = "5.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Search
tantivy = "0.22"

# Parsing
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-cpp = "0.23"

# File system
walkdir = "2.4"
ignore = "0.4"   # gitignore-aware walking (same crate as ripgrep)
notify = "6.1"

# Utilities
sha2 = "0.10"
hex = "0.4"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.11"
fs2 = "0.4"
libc = "0.2"

# TUI
ratatui = "0.26"
crossterm = "0.27"
syntect = "5.2"
indicatif = "0.17"

# Compression & memory-mapped I/O (vector store)
zstd = "0.13"
memmap2 = "0.9"

# ML (Phase 7, local-models feature)
candle-core = { version = "0.4", optional = true }
candle-nn = { version = "0.4", optional = true }
candle-transformers = { version = "0.4", optional = true }
tokenizers = { version = "0.15", optional = true }
qdrant-client = { version = "1.8", optional = true }

# HTTP (self-update + optional cloud APIs)
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Self-update archive extraction
flate2 = "1.0"
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
